# mkxp-z-xxx

./: CMakeLists.txt
cmake/pixman/: CMakeLists.txt  config.h.in
cmake/theora/: CMakeLists.txt
